Bundles: MacOS package uses Qt framework version 5.15.3.

*****************************************************************************************************
BUGFIXES:

001 ==> 450567 - When editing a group caption, the digiKam does not warn of possible information loss.
002 ==> 450587 - Inconsistent disabled state of Save action after Undo/Redo.
003 ==> 451256 - An empty album displays a notification message that the database query returned no result.
004 ==> 451265 - Incorrect information in dialog.
005 ==> 451221 - Cannot start digiKam.
006 ==> 451289 - Database identifiers should be protected with tick marks.
007 ==> 436533 - Add JPEG XL support in all bundles (AppImage, MacOS, Windows).
009 ==> 109060 - Add AVIF file format support to all bundles (AppImage, MacOS, Windows).
010 ==> 451374 - When changing image orientation to portrait in DNG file, the change does not seem to get written to file metadata.
011 ==> 451460 - Failed to update the database schema from version 10 to version 11.
012 ==> 449406 - Photograph Properties incorrect after saving in image editor.
013 ==> 451660 - digiKam Import Main View - <Ctrl-W>, <Ctr-Esc> and Menu entry "Close" do not close the Window.
014 ==> 451697 - Why does digikam do anything to Thumbnails if tags are changed?
015 ==> 451628 - digiKam hangs on startup.
016 ==> 451545 - Strange tagging after building a new database.
017 ==> 451347 - Missing Rating info in XMP sidecar, for RAW files.
018 ==> 450785 - Image version hiding not working.
019 ==> 451723 - Reread metadata from image stalls when started from Tag Manager.
020 ==> 451291 - Insuffiecient privileges "ALTER TABLE" crashes digikam.
021 ==> 451786 - Zero sized images on failed move.
022 ==> 451785 - Map view freezing.
023 ==> 451637 - Crash while extra->maintenance.
024 ==> 386522 - Video decoder backend in digiKam (windows 10).
025 ==> 418266 - Animated .gif files flicker while looping.
026 ==> 451933 - No access to folders with Flatpak.
027 ==> 